force-app/main/default/objects/TransformerPullDownList__mdt/TransformerPullDownList__mdt.object-meta.xml
<CustomObject>
    <description>変圧器種類プルダウンリスト</description>
    <label>変圧器種類プルダウンリスト</label>
</CustomObject>