force-app/main/default/objects/TransformerPullDownList__mdt/fields/DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>DisplayOrder__c</fullName>
    <label>表示順</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>