force-app/main/default/objects/TransformerPullDownList__mdt/fields/MajorClassification__c.field-meta.xml
<CustomField>
    <fullName>MajorClassification__c</fullName>
    <description>見積項目.大分類と一致</description>
    <label>大分類</label>
    <length>100</length>
    <type>Text</type>
</CustomField>