force-app/main/default/objects/TransformerPullDownList__mdt/fields/MinorClassification__c.field-meta.xml
<CustomField>
    <fullName>MinorClassification__c</fullName>
    <description>見積項目.小分類と一致</description>
    <label>小分類</label>
    <length>100</length>
    <type>Text</type>
</CustomField>