force-app/main/default/objects/TransformerPullDownList__mdt/fields/PulldownName__c.field-meta.xml
<CustomField>
    <fullName>PulldownName__c</fullName>
    <label>プルダウン名</label>
    <length>100</length>
    <type>Text</type>
</CustomField>