force-app/main/default/objects/TransformerPullDownList__mdt/fields/ScreenType__c.field-meta.xml
<CustomField>
    <fullName>ScreenType__c</fullName>
    <label>画面種類</label>
    <length>100</length>
    <type>Text</type>
</CustomField>