force-app/main/default/objects/TransformerPullDownList__mdt/fields/TransformerType__c.field-meta.xml
<CustomField>
    <fullName>TransformerType__c</fullName>
    <label>変圧器種類</label>
    <length>100</length>
    <type>Text</type>
</CustomField>